# skunkwork

./: .gitmodules  CMakeLists.txt  README.md  todo
ext/: CMakeLists.txt
ext/bass/: LICENSE
include/: CMakeLists.txt  frameBuffer.hpp  gpuProfiler.hpp  gui.hpp  guiWidgets.hpp  log.hpp  marched.hpp  noise.h  quad.hpp  scene.hpp  shader.hpp  shaderProgram.hpp  texture.hpp  timer.hpp  window.hpp
res/shader/: basic_frag.glsl  noise.glsl  shading.glsl  tonemap.glsl  tri_frag.glsl  tri_vert.glsl  uniforms.glsl
src/: CMakeLists.txt  audioStream.cpp  frameBuffer.cpp  gpuProfiler.cpp  gui.cpp  guiWidgets.cpp  log.cpp  main.cpp  main_skunktoy.cpp  main_skunkwork.cpp  marched.cpp  quad.cpp  scene.cpp  shader.cpp  shaderProgram.cpp  texture.cpp  timer.cpp  window.cpp
